--- a/contacteer_ons.html
+++ b/contacteer_ons.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact Us at Bubble Under</title>
+    <title>LippeLof, belevenissen in de kerk zijn tof!</title>
     <meta charset="utf-8" />
-    <!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
 	 <link href="style1.css" rel="stylesheet" type="text/css" />
 	 <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
   </head>
@@ -28,6 +25,9 @@
 	<!-- <li><a href="fotoboek.html">Fotoboek</a></li> -->
       </ul>
     </nav>
+    <div id="body_image">
+      <img src="backgrounds/LippeLof_NEG_WEBSAFE.png" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
+    </div>
     <div id="body_text">
       <h2>Contactgegevens</h2>
       <p>
@@ -134,5 +134,8 @@
     <!-- </script> -->
     <!-- <script type="text/javascript" src="js/jquery-1.5.2.min.js"></script> -->
     <!-- <script type="text/javascript" src="js/common.js"></script> -->
+    <div id="body_image">
+      <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+    </diV>
   </body>
 </html>
