--- a/evenementen.html
+++ b/evenementen.html
@@ -26,16 +26,16 @@
       </ul>
     </nav>
     <div id="body_image">
-      <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
+      <img src="backgrounds/LippeLof_NEG_WEBSAFE.png" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
     </diV>
     <div id="body_text">
       <h2>Save the dates</h2>
-      <aside>
-	<blockquote>
-	  Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat...
-	</blockquote>
-	Kristien Van Riet & Bart Borghmans, December 2025
-      </aside>
+      <!-- <aside> -->
+      <!-- 	<blockquote> -->
+      <!-- 	  Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat... -->
+      <!-- 	</blockquote> -->
+      <!-- 	Kristien Van Riet & Bart Borghmans, December 2025 -->
+      <!-- </aside> -->
       <table class="events" summary="Tal van openingsactiviteiten in december!">
         <caption>Tal van openingsactiviteiten in december!</caption>   
         <tr>
@@ -75,13 +75,13 @@
         </tr> 
       </table>
     </div>
-    <div>
-      <aside>
-	<blockquote>
-	  Tal van openingsactiviteiten in december!
-	</blockquote>
-      </aside>
-    </div>
+    <!-- <div> -->
+    <!--   <aside> -->
+    <!-- 	<blockquote> -->
+    <!-- 	  Tal van openingsactiviteiten in december! -->
+    <!-- 	</blockquote> -->
+    <!--   </aside> -->
+    <!-- </div> -->
     <div id="body_image">
       <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </diV>
