--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
       <div id="sitebranding">
 	<h1>lippelof.be</h1>
       </div>
-      <div id="tagline">
-	<p>LippeLof is super tof!</p>
-      </div>
     </header>
     <nav>
       <ul>
@@ -26,20 +23,26 @@
       </ul>
     </nav>
     <div id="body_image">
-      <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
-    </diV>
+      <img src="backgrounds/LippeLof_NEG_WEBSAFE.png" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
+    </div>
     <div id="body_text">
-      <h2>Een stukje erfgoed met een nieuwe bestemming</h2>
       <p>
-	Na een zorgvuldige  restauratie heeft de oude  kerk haar glans
-	teruggevonden – en  meer dan dat… Dit prachtige monument  vormt nu het
-	ideale decor  voor allerlei evenementen en  activiteiten.  Met respect
-	voor het  verleden en oog  voor hedendaags  comfort biedt de  kerk een
-	unieke sfeer waar geschiedenis en beleving samenkomen.  Gelegen in het
-	midden  van  Vlaanderen,   tussen  bos  en  veld  is   het  de  ideale
-	uitvalsbasis voor de Lippelose gemeenschap en ver daarbuiten.
+	<br>
+      </p>
       <p>
-	</p>
+	<h2>Een stukje erfgoed met een nieuwe bestemming</h2>
+      </p>
+      <p>
+	Na een zorgvuldige restauratie heeft de oude kerk haar glans
+	teruggevonden – en meer dan  dat… Dit prachtige monument vormt
+	nu het ideale decor voor allerlei evenementen en activiteiten.
+	Met respect voor  het verleden en oog  voor hedendaags comfort
+	biedt de kerk  een unieke sfeer waar  geschiedenis en beleving
+	samenkomen.  Gelegen in het  midden van Vlaanderen, tussen bos
+	en  veld  is het  de  ideale  uitvalsbasis voor  de  Lippelose
+	gemeenschap en ver daarbuiten.
+      <p>
+      </p>
       LippeLof is meer dan een locatie.
       Het is een lofzang op het leven, op de gemeenschap, op Lippelo.
       </p>
@@ -47,13 +50,13 @@
 	Welkom – voel je thuis in LippeLof.
       </p>
     </div>
-    <div>
-      <aside>
-	<blockquote>
-	  Tal van openingsactiviteiten in december!
-	</blockquote>
-      </aside>
-    </div>
+    <!-- <div> -->
+    <!--   <aside> -->
+    <!-- 	<blockquote> -->
+    <!-- 	  Tal van openingsactiviteiten in december! -->
+    <!-- 	</blockquote> -->
+    <!--   </aside> -->
+    <!-- </div> -->
     <div id="body_image">
       <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </div>
