--- a/over_ons.html
+++ b/over_ons.html
@@ -26,7 +26,7 @@
       </ul>
     </nav>
     <div id="body_image">
-      <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
+      <img src="backgrounds/LippeLof_NEG_WEBSAFE.png" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
     </diV>
     <div id="body_text">
       <h2>Wie zijn wij?</h2>
@@ -64,6 +64,14 @@
 	verbondenheid van  Bart met de  kerk, liggen aan de  basis van
 	LippeLof.
       </p>
+    </div>
+    <!-- <div> -->
+    <!--   <aside> -->
+    <!-- 	<blockquote> -->
+    <!-- 	  Vele mogelijkheden voor verenigingen, organisaties, particulieren, kleine zelfstandigen en bedrijven. -->
+    <!-- 	</blockquote> -->
+    <!--   </aside> -->
+    <!-- </div> -->
     <div id="body_image">
       <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </div>
