--- a/faciliteiten.html
+++ b/faciliteiten.html
@@ -26,16 +26,10 @@
       </ul>
     </nav>
     <div id="body_image">
-      <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
+      <img src="backgrounds/LippeLof_NEG_WEBSAFE.png" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
     </diV>
     <div id="body_text">
       <h2>Onze faciliteiten</h2>
-      <aside>
-	<blockquote>
-	  Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat...
-	</blockquote>
-	Kristien Van Riet & Bart Borghmans, December 2025
-      </aside>
       <p>
 	<ul>
 	  <li>Polivalente ruimte (excl. hoogkoor) met 180 stoelen en multifunctionele tafels: 290 m²</li>
@@ -60,13 +54,14 @@
 	  </ul>
       </p>
     </div> 
-    <div>
-      <aside>
-	<blockquote>
-	  Vele mogelijkheden voor verenigingen, organisaties, particulieren, kleine zelfstandigen en bedrijven.
-	</blockquote>
-      </aside>
-    </div>
+    <!-- <div> -->
+    <!--   <aside> -->
+    <!-- 	<blockquote> -->
+    <!-- 	  Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat... -->
+    <!-- 	</blockquote> -->
+    <!-- 	Kristien Van Riet & Bart Borghmans, December 2025 -->
+    <!--   </aside> -->
+    <!-- </div> -->
     <div id="body_image">
       <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </diV>
