--- a/evenementen.html
+++ b/evenementen.html
@@ -47,21 +47,21 @@
         </tr>   
         <tr>     
           <td>Zaterdag 13 december</td>     
-          <td><a href="openingsconcert.html">Concert met Paul Michiels</a></td>     
+          <td><a href="evenementen/openingsconcert.html">Concert met Paul Michiels</a></td>     
           <td>Deuren 19u15 | Concert 20u</td>
 	  <td>20€</td>
           <td>Gemeente Puurs-Sint-Amands en Cultuurkerk Lippelo</td>
         </tr>   
         <tr>     
           <td>Zondag 14 december</td>     
-          <td><a href="ontdek_de_kerk.html">Opendeur LippeLof</a></td>
+          <td><a href="evenementen/ontdek_de_kerk.html">Opendeur LippeLof</a></td>
 	  <td>Van 14u tot 18u</td>
 	  <td>Gratis</td>
           <td>LippeLof by Kristien & Bart</td>   
         </tr>   
         <tr>     
           <td>Zaterdag 20 december</td>
-          <td>Kerstmarkt</td>     
+          <td><a href="evenementen/kerstmarkt.html">Kerstmarkt</a></td>     
           <td>vanaf 17u</td>
           <td>Gratis</td>     
           <td>Kerstcomité Lippelo</td>   
