--- a/evenementen/kerstmarkt.html
+++ b/evenementen/kerstmarkt.html
@@ -42,35 +42,22 @@
       </aside>
       <p><span class="fun">LippeLof</span> is gehuisvest in de kerk van Lippelo.</p>
       <p>
-	De deuren gaan open om 19u15.
+	De kerk van Lippelo straalt weer als nooit tevoeren. Na een zorgvuldige restauraite gaan de deuren opnieuw open.
       </p>
       <p>
-	Het concert start om 10u.
+	Bart Borghmans en Kristien Van Riet bouwen de kerk uit tot een <em>warme plek</em> waar iedereen zich welkom voelt van buurtbewoners tot verenigingen en bezoekers van ver weg. Dat doen ze onder de naam <em>LippeLof</em>.
       </p>
       <p>
-	<a href="http://www.uitinpuurssintamands.be">Tickets en info.</a>.
+	Ontdek hoe dit bijzonder gebouw, vol geschiedenis en karakter, nieuwe mogelijkheden krijgt.
       </p>
       <p>
-	André Waumans | 0475 28 53 45
-      </p>
-      <p>
-	Jan Caluwaerts | 052 33 33 10
+	Van 14u tot 18u.
       </p>
     </div>
     <div>
-      <aside>
-	<blockquote>
-	  Op zoek naar  een unieke locatie voor één  of ander activiteit
-	  of evenement?  Zowel particulieren, verenigingen als bedrijven
-	  zijn welkom.  Gelegen in het midden van Vlaanderen, tussen bos
-	  & veld, en verschillende fiets en wandelknooppunten.  LippeLof
-	  zou wel  eens de  perfecte locatie  kunnen zijn  voor <em>jouw
-	    evenement</em>.
-	</blockquote>
-      </aside>
     </div>
     <div id="body_image">
-      <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+      <img src="evenementen/Kerstmarkt.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </div>
   </body>
 </html>
