--- a/evenementen/openingsconcert.html
+++ b/evenementen/openingsconcert.html
@@ -17,11 +17,11 @@
     </header>
     <nav>
       <ul>
-	<li><a href="index.html">Thuis</a></li>
-	<li><a href="over_ons.html">Wie zijn wij</a></li>
-	<li><a href="faciliteiten.html">Faciliteiten</a></li>
-	<li><a href="evenementen.html">Evenementen</a></li>
-	<li><a href="contacteer_ons.html">Contacteer ons</a></li>
+	<li><a href="../index.html">Thuis</a></li>
+	<li><a href="../over_ons.html">Wie zijn wij</a></li>
+	<li><a href="../faciliteiten.html">Faciliteiten</a></li>
+	<li><a href="../evenementen.html">Evenementen</a></li>
+	<li><a href="../contacteer_ons.html">Contacteer ons</a></li>
 	<!-- <li><a href="fotoboek.html">Fotoboek</a></li> -->
       </ul>
     </nav>
