--- a/evenementen/ontdek_de_kerk.html
+++ b/evenementen/ontdek_de_kerk.html
@@ -3,7 +3,7 @@
   <head>
     <title>LippeLof, belevenissen in de kerk zijn tof!</title>
     <meta charset="utf-8" />
-    <link href="style1.css" rel="stylesheet" type="text/css" />
+    <link href="../style1.css" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
   </head>
   <body>
