--- a/evenementen/kerstmarkt.html
+++ b/evenementen/kerstmarkt.html
@@ -57,7 +57,7 @@
     <div>
     </div>
     <div id="body_image">
-      <img src="evenementen/Kerstmarkt.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+      <img src="./Kerstmarkt.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </div>
   </body>
 </html>
