--- a/evenementen/ontdek_de_kerk.html
+++ b/evenementen/ontdek_de_kerk.html
@@ -55,7 +55,7 @@
       </p>
     </div>
     <div id="body_image">
-      <img src="evenementen/ontdek_de_kerk.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+      <img src="./ontdek_de_kerk.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </div>
   </body>
 </html>
