--- a/evenementen/openingsconcert.html
+++ b/evenementen/openingsconcert.html
@@ -58,7 +58,7 @@
       </p>
     </div>
     <div id="body_image">
-      <img src="evenementen/openingsconcert.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+      <img src="./openingsconcert.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </div>
   </body>
 </html>
