--- a/evenementen/kerstmarkt.html
+++ b/evenementen/kerstmarkt.html
@@ -57,7 +57,9 @@
     <div>
     </div>
     <div id="body_image">
-      <img src="./Kerstmarkt.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+      <aside>
+      <img src="./Kerstmarkt.jpg" width="600" height="900" alt="De kerk van Lippelo;" id="kerkImage" />
+      </aside>
     </div>
   </body>
 </html>
