Opmerkingen mail zondag 9 november 2025 18:27.

--- a/index.html
+++ b/index.html
@@ -28,23 +28,33 @@
     <div id="body_text">
       <p>
 	<br>
+	<br>
+	<br>
       </p>
       <p>
 	<h2>Een stukje erfgoed met een nieuwe bestemming</h2>
       </p>
       <p>
 	Na een zorgvuldige restauratie heeft de oude kerk haar glans
-	teruggevonden – en meer dan  dat… Dit prachtige monument vormt
+	teruggevonden – en meer dan  dat…
+	<br>
+	Dit prachtige monument vormt
 	nu het ideale decor voor allerlei evenementen en activiteiten.
+	<br>
 	Met respect voor  het verleden en oog  voor hedendaags comfort
 	biedt de kerk  een unieke sfeer waar  geschiedenis en beleving
-	samenkomen.  Gelegen in het  midden van Vlaanderen, tussen bos
+	samenkomen.
+	<br>
+	Gelegen in het  midden van Vlaanderen, tussen bos
 	en  veld  is het  de  ideale  uitvalsbasis voor  de  Lippelose
 	gemeenschap en ver daarbuiten.
-      <p>
       </p>
-      LippeLof is meer dan een locatie.
-      Het is een lofzang op het leven, op de gemeenschap, op Lippelo.
+      <p>
+	LippeLof is meer dan een locatie.
+	<br>
+	<em>
+	  Het is een lofzang op het leven, op de gemeenschap, op Lippelo.
+	</em>
       </p>
       <p>
 	Welkom – voel je thuis in LippeLof.
