--- a/evenementen/ontdek_de_kerk.html
+++ b/evenementen/ontdek_de_kerk.html
@@ -55,7 +55,9 @@
       </p>
     </div>
     <div id="body_image">
-      <img src="./ontdek_de_kerk.jpg" width="600" height="900" alt="De kerk van Lippelo;" id="kerkImage" />
+      <aside>
+	<img src="./ontdek_de_kerk.jpg" width="600" height="900" alt="De kerk van Lippelo;" id="kerkImage" />
+      </aside>
     </div>
   </body>
 </html>
