--- a/over_ons.html
+++ b/over_ons.html
@@ -72,8 +72,8 @@
     <!-- 	</blockquote> -->
     <!--   </aside> -->
     <!-- </div> -->
-    <div id="body_image">
-      <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
-    </div>
+    <!-- <div id="body_image"> -->
+    <!--   <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" /> -->
+    <!-- </div> -->
   </body>
 </html>
