--- a/contacteer_ons.html
+++ b/contacteer_ons.html
@@ -135,7 +135,7 @@
     <!-- <script type="text/javascript" src="js/jquery-1.5.2.min.js"></script> -->
     <!-- <script type="text/javascript" src="js/common.js"></script> -->
     <div id="body_image">
-      <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+      <img src="backgrounds/IMG_4907.jpg" width="200" height="300" alt="Kristien & Bart voor LippeLof." id="kerkImage" />
     </diV>
   </body>
 </html>
