Opmerkingen mail zondag 9 november 2025 18:27.

--- a/over_ons.html
+++ b/over_ons.html
@@ -32,11 +32,15 @@
       <h2>Wie zijn wij?</h2>
       <p>
 	Wij zijn Bart Borghmans & Kristien  Van Riet, 2 mensen met een
-	hart voor Lippelo en een  gezamenlijke passie voor muziek.  Na
+	hart voor Lippelo en een  gezamenlijke passie voor muziek.
+	<br>
+	Na
 	jarenlange carrières  in totaal verschillende werelden  - Bart
 	als  verzekeringsmakelaar  en  Kristien  als  lerares  in  het
 	deeltijds kunstonderwijs  – voelden we  dat het tijd  was voor
-	een  nieuwe  uitdaging.   Iets   totaal  anders,  vooral  iets
+	een  nieuwe  uitdaging.
+	<br>
+	Iets   totaal  anders,  vooral  iets
 	plezant, bovenop onze huidige job.
       </p>
       <p>
@@ -52,9 +56,13 @@
       </p>
       <p>
 	Kristien, afkomstig uit Buggenhout,  voelde zich al snel thuis
-	in   het   gezellige   Lippelo.   Haar   opleiding   aan   het
+	in   het   gezellige   Lippelo.
+	<br>
+	Haar   opleiding   aan   het
 	Lemmensinstituut legde  de basis voor haar  muzikale loopbaan,
 	maar  ook voor  haar overtuiging  dat muziek  mensen verbindt.
+	<br>
+	
 	Via haar job als lerares gitaar en groepsmusiceren, stimuleert
 	ze  jong en  oud  om  samen te  creëren,  te  luisteren en  te
 	groeien.
