Fotogalerij n.a.v. mail zondag 26 oktober 2025 17:21.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<li><a href="faciliteiten.html">Faciliteiten</a></li>
 	<li><a href="evenementen.html">Evenementen</a></li>
 	<li><a href="contacteer_ons.html">Contacteer ons</a></li>
-	<!-- <li><a href="fotoboek.html">Fotoboek</a></li> -->
+	<li><a href="galerij.html">Galerij</a></li>
       </ul>
     </nav>
     <div id="body_image">
