--- a/over_ons.html
+++ b/over_ons.html
@@ -81,7 +81,7 @@
     <!--   </aside> -->
     <!-- </div> -->
     <!-- <div id="body_image"> -->
-    <!--   <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" /> -->
-    <!-- </div> -->
+      <img src="backgrounds/wie_zijn_wij.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+    </div>
   </body>
 </html>
