Aanpassingen via word document van mail 26 oktober 20215 17:21.

--- a/faciliteiten.html
+++ b/faciliteiten.html
@@ -53,6 +53,9 @@
 	  <li>Allerlei ontmoetingsmomenten</li>
 	  </ul>
       </p>
+      <p>
+	Vele mogelijkheden voor verenigingen, organisaties, particulieren, kleine zelfstandigen en bedrijven.
+      </p>
     </div> 
     <!-- <div> -->
     <!--   <aside> -->
