--- a/index.html
+++ b/index.html
@@ -1,69 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>LippeLof, belevenissen in de kerk zijn tof!</title>
-    <meta charset="utf-8" />
-    <link href="style1.css" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-    <header>
-      <div id="sitebranding">
-	<h1>lippelof.be</h1>
-      </div>
-    </header>
-    <nav>
-      <ul>
-	<li><a href="index.html">Thuis</a></li>
-	<li><a href="over_ons.html">Wie zijn wij</a></li>
-	<li><a href="faciliteiten.html">Faciliteiten</a></li>
-	<li><a href="evenementen.html">Evenementen</a></li>
-	<li><a href="contacteer_ons.html">Contacteer ons</a></li>
-	<li><a href="galerij.html">Galerij</a></li>
-      </ul>
-    </nav>
-    <div id="body_image">
-      <img src="backgrounds/LippeLof_NEG_WEBSAFE.png" width="300" height="100" alt="Logo LippeLof." id="logoImage" />
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hover Effect</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <p>Dit is een voorbeeldtekst. Zweef over het kleine vakje hieronder om het effect te zien.</p>
+        <div class="hover-box">Hover over mij!</div>
+        <p>Meer tekst hieronder. Het vergrote vakje zal over deze tekst heen komen.</p>
     </div>
-    <div id="body_text">
-      <p>
-	<h2>Een stukje erfgoed met een nieuwe bestemming</h2>
-      </p>
-      <p>
-	Na een zorgvuldige restauratie heeft de oude kerk haar glans
-	teruggevonden – en meer dan  dat…
-	<br>
-	Dit prachtige monument vormt
-	nu het ideale decor voor allerlei evenementen en activiteiten.
-	<br>
-	Met respect voor  het verleden en oog  voor hedendaags comfort
-	biedt de kerk  een unieke sfeer waar  geschiedenis en beleving
-	samenkomen.
-	<br>
-	Gelegen in het  midden van Vlaanderen, tussen bos
-	en  veld  is het  de  ideale  uitvalsbasis voor  de  Lippelose
-	gemeenschap en ver daarbuiten.
-      </p>
-      <p>
-	LippeLof is meer dan een locatie.
-	<br>
-	<em>
-	  Het is een lofzang op het leven, op de gemeenschap, op Lippelo.
-	</em>
-      </p>
-      <p>
-	Welkom – voel je thuis in LippeLof.
-      </p>
-    </div>
-    <!-- <div> -->
-    <!--   <aside> -->
-    <!-- 	<blockquote> -->
-    <!-- 	  Tal van openingsactiviteiten in december! -->
-    <!-- 	</blockquote> -->
-    <!--   </aside> -->
-    <!-- </div> -->
-    <div id="body_image">
-      <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
-    </div>
-  </body>
+</body>
 </html>
