--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <p>Dit is een voorbeeldtekst. Zweef over het kleine vakje hieronder om het effect te zien.</p>
-        <div class="hover-box">Hover over mij!</div>
+        <div class="hover-box">Hover over mij!
+	  <img src="galerij/IMG_3009.JPG" alt="ne foto">
+	</div>
         <p>Meer tekst hieronder. Het vergrote vakje zal over deze tekst heen komen.</p>
     </div>
 </body>
